--- a/assignment/lake-ice-part1.qmd
+++ b/assignment/lake-ice-part1.qmd
@@ -67,7 +67,7 @@ library(ggplot2)
 
 ggplot(sunapee, aes(x = year, y = ice_off_doy)) +
   geom_point() +
-  geom_line() +
+  geom_line(color = "navyblue") +
   labs( title = "Sunapee Ice-Off Day of Year Over Time",
     x = "Year",
     y = "Ice-Off Day of Year") +
@@ -82,7 +82,7 @@ We want to model how the ice-off date changes over time. Our approach in this mo
 
 What do you expect the sign (plus, minus, or no change) to be for the slope of the relationship? Why?
 
-We expect a negative slope, as when the climate warms over time, we can expect lakes to lose ice earlier in the year. Since earlier dates correspond to smaller day of year values, increasing year should correspond to decreasing ice-off day of year.
+We expect a negative slope for the relationship, as when the climate warms over time, we can expect lakes to have the ice melt earlier in the year. Additionally, the negative slope would be representiative of the downward trend of ice off days presented in the plot from question 1. Since earlier dates correspond to smaller day of year values, increasing year should correspond to decreasing ice-off day of year.
 
 **Answer 2:**
 
@@ -106,6 +106,7 @@ The results of your linear model are in an object named `fit`, so you can find t
 fit$coefficients[1]
 fit$coefficients[2]
 ```
+The coefficients for the intercept, `R fit$coefficients[1]`, and the slope, `R fit$coefficients[2]`, match the values presented in the summary command. 
 
 **Question 3:**
 
@@ -113,7 +114,7 @@ What is the direction of the slope? How does this match your expectations from Q
 
 **Answer 3:**
 
-The slope is negative (-0.1060227), indicating that ice-off dates are occurring earlier over time, which matches our expectation from Question 2.
+The slope is negative (-0.1060227), indicating that ice-off dates are occurring in the year earlier over time, which matches our expectations from Question 2 directly.
 
 # Is our model any good?
 
@@ -127,11 +128,11 @@ What is the R2 for the regression? Based on the R2, is `year` and `ice_off_doy` 
 
 **Answer 4:**
 
-
+The R2 for the regression is 0.2003. Based on the fact that for environmental data trends that a R2 of 0.3 is considered good enough, we would believe that the `year` and `ice_off_doy` are not strongly related. 
 
 ## Residuals normally distributed
 
-Second, it is important that the residuals from our linear model are normally distributed.  The following is a normal distribution that you can visually compare to:
+Second, it is important that the residuals from our linear model are normally distributed. The following is a normal distribution that you can visually compare to:
 
 ```{r}
 ggplot(data = tibble(value = rnorm(1000, 0, 1))) +
@@ -159,7 +160,13 @@ Use the [`add_predictions()`](https://modelr.tidyverse.org/reference/add_predict
 **Answer 5:**
 
 ```{r}
+library(modelr)
 
+sunapee <- sunapee |>
+  add_predictions(fit) |>
+  add_residuals(fit)
+
+head(sunapee)
 ```
 
 Now, to visualize the residuals, use `geom_histogram()` to plot them as a histogram. I recommend using a bin width of 10 in the histogram.
@@ -171,8 +178,15 @@ Show Histogram and answer the following question: do the residuals meet the assu
 **Answer 6:**
 
 ```{r}
-
+ggplot(sunapee, aes(x = resid)) +
+  geom_histogram(binwidth = 10, color = "black", fill = "skyblue") +
+  labs(title = "Histogram of Sunapee Residuals",
+       x = "Residual",
+       y = "Frequency") +
+  theme_bw()
 ```
+
+From the histogram, we observe a genral unimodal peak of the count for the residuals centered around 0, in a pattern representative of a normal distribution. Hence, the residuals do meet the assumptions for a linear regression. 
 
 
 ## The slope is different from zero
@@ -185,6 +199,8 @@ Based on the `summary()` above, what is the p-value for the slope?
 
 **Answer 7:**
 
+The p-value for the slope is 2.5e-09. 
+
 ## The slope physically meaningful
 
 A slope value could have a low probability of being 0 (thus we have a strong belief that it is not zero), but the magnitude of change is functionally meaningless in the physical world (i.e., the rate of change is so small that we would not think much of it). This can occur particularly when analyzing large datasets.
@@ -195,6 +211,8 @@ Based on the slope value, how many more years are needed to pass before the lake
 
 **Answer 8:**
 
+
+
 ## Overall model assessment
 
 **Question 9:**
@@ -202,13 +220,23 @@ Based on the slope value, how many more years are needed to pass before the lake
 How comfortable are you proceeding with using this linear model for additional analysis and prediction? Why? (I am not looking for your gut answer, rather I want you to apply concepts taught in this module to justify your answer)
 
 **Answer 9:**
+I would say that I am moderately comfortable using this linear model for the descriptive trend analysis and prediction, but I will be cautious. For descriptive analysis, the linear regression does give a statistically significant slope (p = 2.5e-09), and the residuals of the model are approximately normal. Hence, the linear regression can be trusted for representing generalized long-term trends. However, the raw data demonstrates that there is a lot of variability from year to year, with large spikes/swings in the pattern of points, and the R2 value of the relationship between year and the ice of day of year is very low (0.2003), which leads me to be cautious of the results as they may not adequately represent for the variability or other influences.
 
 **Question 10:**
 Now plot the data for Lake Sunapee (just like above - year on x-axis vs. ice of doy on y axis) but add the line from your regression results (e.g., fit intercept and slope). You will use the [`geom_abline`](https://ggplot2.tidyverse.org/reference/geom_abline.html). 
 
 **Answer 10:**
 ```{r}
-
+ggplot(sunapee, aes(x = year, y = ice_off_doy)) +
+  geom_point() +
+  geom_line() +
+  geom_abline(intercept = fit$coefficients[1],
+              slope = fit$coefficients[2],
+              color = "red") +
+  labs(title = "Sunapee Ice-Off Day of Year - Regression Line",
+       x = "Year",
+       y = "Ice-Off Day of Year") +
+  theme_bw()
 ```
 
 **Question 11:**
